<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterCustomerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:background="@color/textDarkGrey"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="@color/colorAccent"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="@color/textDarkGrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/formLabel"
                android:text="@string/card_number"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/border_text"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <EditText
            style="@style/inputText"
            android:inputType="number"
            android:hint="@string/placeholder_card_number"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_card_expiry"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/formLabel"
                android:text="@string/expiry_date"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    style="@style/inputText"
                    android:inputType="number"
                    android:hint="@string/card_month"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"/>
                <EditText
                    style="@style/inputText"
                    android:inputType="number"
                    android:hint="@string/card_year"
                    android:padding="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/formLabel"
                android:text="@string/cvv"/>
            <EditText
                style="@style/inputText"
                android:inputType="number"
                android:hint="@string/placeholder_cvv"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formLabel"

            android:text="@string/card_holder"/>
        <EditText
            style="@style/inputText"
            android:inputType="number"
            android:hint="@string/placeholder_card_holder"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formLabel"
            android:text="@string/phone_label"/>
        <EditText
            style="@style/inputText"
            android:inputType="number"
            android:hint="@string/placeholder_card_phone"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        style="@style/submitButton"
        android:text="@string/register_card"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"/>
</LinearLayout>