<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGrey"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <!--Header-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"

            android:textSize="40sp"
            android:layout_marginBottom="30dp"/>

        <!--Phone Input-->
        <TextView
            style="@style/formLabel"
            android:text="@string/phone_label" />
        <EditText
            style="@style/inputText"
            android:hint="@string/phone_placeholder"
            android:inputType="phone"
            android:layout_marginBottom="10dp"/>

        <!--Password Input-->
        <TextView
            style="@style/formLabel"
            android:text="@string/password_label" />

        <EditText
            style="@style/inputText"
            android:hint="@string/phone_placeholder"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <Button
            style="@style/submitButton"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:layout_gravity="right"/>

        <!--Register Section-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_account" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/rect"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>